chore(network) fix ovn network tests, make ip address radio labels visible

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -150,12 +150,7 @@
     align-items: flex-start;
 
     > :nth-child(2) {
-      margin-left: -1.5rem;
       margin-top: -5px;
-    }
-
-    .p-radio__label {
-      font-size: 0;
     }
   }
 
